fixed animation and overflow issues with overflow-x clip

--- a/src/global.css
+++ b/src/global.css
@@ -90,6 +90,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+#app {
+  overflow-x: clip;
+}
 body {
   background: var(--bodyBG);
 }
