--- a/src/layouts/MainLayout.css
+++ b/src/layouts/MainLayout.css
@@ -1,7 +1,6 @@
 .layout {
   font-family: "Inter";
   height: 100vh;
-  overscroll-behavior: contain;
 }
 .header {
   position: relative;
@@ -13,11 +12,10 @@
   box-shadow: 0 1px 20px 10px rgba(0, 0, 0, 0.1);
 }
 .mobile-logo {
-  display: none;
   margin-inline-start: 1rem;
 }
 .desktop-logo {
-  /* display: none; */
+  display: none;
 }
 /*  //! FOOTER SECTION */
 .footer-container {
